<resources>
    <string name="app_name">Calculator</string>
    <string name="p_calculator">P Calculator</string>
    <string name="enter_percent">Enter Percent :</string>
    <string name="hint_enter_percent">Enter Percent...</string>
    <string name="enter_number">Enter Number : </string>
    <string name="hint_enter_number">Enter Number...</string>
    <string name="btn_cal">CALCULATE THE RESULT</string>
    <string name="result">Result</string>
    <string name="Title">"5회 완료"</string>
    <string name="Message">"5회가 완료되어 앱을 종료합니다."</string>
    <string name="Postive">"앱 종료"</string>


</resources>
