<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:text="@string/p_calculator"
        android:textColor="#FF9800"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter_percent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_enter_percent"
            android:inputType="numberDecimal"
            android:lines="10"
            android:textColorHighlight="#30dac5"
            android:textColorLink="#30dac5"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter_number"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/Number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_enter_number"
            android:inputType="number"
            android:lines="10"
            android:textColorHighlight="#30dac5"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="#673AB7"
        android:text="@string/btn_cal"
        android:textColor="#2196F3"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#E91E63"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</LinearLayout>